// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverlayComponent should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0f0f17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0f0f17;
}

.emotion-8 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-10 {
  font-size: 1rem;
  font-weight: 500;
  color: black;
  background-color: #fefefe;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-10:hover:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-10:active:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-10:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-10:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-15 {
  fill: #0f0f17;
  width: 0.625rem;
  height: 0.625rem;
}

.emotion-15 path {
  fill: #0f0f17;
}

.emotion-16 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-color: #edefff;
}

.emotion-20 {
  color: #757bb2;
  padding: 1rem 0;
  width: 2.4375rem;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-27 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-28 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-34 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
}

.emotion-35 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-35:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-38 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-39 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-39:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-40 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-40:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-41 {
  border: 0.0625rem solid transparent;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175BF5;
}

.emotion-41:hover {
  border-radius: 100%;
  background: false;
}

.emotion-42 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: #e7eefe;
}

.emotion-43 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-43:hover {
  border-radius: 100%;
  background: #d0defd;
}

.emotion-100 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-100>button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-101 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #175BF5;
  background-color: transparent;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: solid 0.0625rem #175BF5;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-101:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.125rem;
}

.emotion-101:hover:not(:disabled) {
  background-color: rgba(23,91,245,0.07);
}

.emotion-101:active:not(:disabled) {
  background-color: rgba(23,91,245,0.14);
}

.emotion-101:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-101:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-103 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-104 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #175BF5;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-104:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-104:hover:not(:disabled) {
  background-color: #1451dc;
}

.emotion-104:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-104:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-104:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0f0f17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0f0f17;
}

.emotion-8 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-10 {
  font-size: 1rem;
  font-weight: 500;
  color: black;
  background-color: #fefefe;
  padding: 0 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-10:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-10:hover:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-10:active:not(:disabled) {
  background-color: #fdfdfd;
}

.emotion-10:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-10:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-12 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-15 {
  fill: #0f0f17;
  width: 0.625rem;
  height: 0.625rem;
}

.emotion-15 path {
  fill: #0f0f17;
}

.emotion-16 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-color: #edefff;
}

.emotion-20 {
  color: #757bb2;
  padding: 1rem 0;
  width: 2.4375rem;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-27 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-28 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-34 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
}

.emotion-35 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-35:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-38 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-39 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-39:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-40 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-40:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-41 {
  border: 0.0625rem solid transparent;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175BF5;
}

.emotion-41:hover {
  border-radius: 100%;
  background: false;
}

.emotion-42 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: #e7eefe;
}

.emotion-43 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-43:hover {
  border-radius: 100%;
  background: #d0defd;
}

.emotion-100 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-100>button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-101 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #175BF5;
  background-color: transparent;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: solid 0.0625rem #175BF5;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-101:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.125rem;
}

.emotion-101:hover:not(:disabled) {
  background-color: rgba(23,91,245,0.07);
}

.emotion-101:active:not(:disabled) {
  background-color: rgba(23,91,245,0.14);
}

.emotion-101:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-101:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-103 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-104 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #175BF5;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-104:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-104:hover:not(:disabled) {
  background-color: #1451dc;
}

.emotion-104:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-104:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-104:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
              data-testid="month_back"
            >
              <span
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                />
              </span>
            </div>
            <div
              role="button"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <button
                    class="emotion-10"
                    data-testid="button-month"
                    type="button"
                  >
                    <span
                      class="emotion-11"
                    >
                      <span
                        class="emotion-12"
                      >
                        November
                         
                        2020
                      </span>
                      <span
                        class="emotion-13"
                      >
                        <span
                          class="emotion-6"
                        >
                          <span
                            class="emotion-15"
                          />
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="emotion-16"
                data-testid="month_forward"
              >
                <span
                  class="emotion-6"
                >
                  <span
                    class="emotion-7"
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="emotion-19"
          >
            <div
              class="emotion-20"
            >
              Mo
            </div>
            <div
              class="emotion-20"
            >
              Tu
            </div>
            <div
              class="emotion-20"
            >
              We
            </div>
            <div
              class="emotion-20"
            >
              Th
            </div>
            <div
              class="emotion-20"
            >
              Fr
            </div>
            <div
              class="emotion-20"
            >
              Sa
            </div>
            <div
              class="emotion-20"
            >
              Su
            </div>
          </div>
          <table
            class="emotion-27"
          >
            <tbody>
              <tr>
                <td
                  class="emotion-28"
                />
                <td
                  class="emotion-28"
                />
                <td
                  class="emotion-28"
                />
                <td
                  class="emotion-28"
                />
                <td
                  class="emotion-28"
                />
                <td
                  class="emotion-28"
                />
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                    data-testid="1_11_2020"
                  >
                    <div
                      class="emotion-35"
                    >
                      1
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-34"
                    data-testid="2_11_2020"
                  >
                    <div
                      class="emotion-35"
                    >
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-38"
                    data-testid="3_11_2020"
                  >
                    <div
                      class="emotion-39"
                    >
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-40"
                    data-testid="4_11_2020_selected"
                  >
                    <div
                      class="emotion-41"
                    >
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="5_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="6_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      6
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="7_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="8_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      8
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="9_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="10_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="11_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="12_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="13_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      13
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="14_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="15_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      15
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="16_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="17_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="18_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="19_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="20_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      20
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="21_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="22_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      22
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="23_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="24_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="25_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="26_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="27_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      27
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="28_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="29_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      29
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-42"
                    data-testid="30_11_2020"
                  >
                    <div
                      class="emotion-43"
                    >
                      30
                    </div>
                  </div>
                </td>
                <td
                  class="emotion-28"
                />
                <td
                  class="emotion-28"
                />
                <td
                  class="emotion-28"
                />
                <td
                  class="emotion-28"
                />
                <td
                  class="emotion-28"
                />
                <td
                  class="emotion-28"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="emotion-100"
      >
        <button
          class="emotion-101"
          data-testid="button-cancel"
          type="button"
        >
          <span
            class="emotion-11"
          >
            <span
              class="emotion-103"
            >
              Cancel
            </span>
          </span>
        </button>
        <button
          class="emotion-104"
          data-testid="button-apply"
          type="button"
        >
          <span
            class="emotion-11"
          >
            <span
              class="emotion-103"
            >
              Apply
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverlayComponent should render datepicker correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  margin-bottom: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 1.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0f0f17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0f0f17;
}

.emotion-8 {
  margin: 1rem 0;
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-color: #edefff;
}

.emotion-11 {
  color: #757bb2;
  padding: 1rem 0;
  width: 2.4375rem;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-18 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-19 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-25 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
}

.emotion-26 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-26:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-29 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-30 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-30:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-31 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-31:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-32 {
  border: 0.0625rem solid transparent;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175BF5;
}

.emotion-32:hover {
  border-radius: 100%;
  background: false;
}

.emotion-33 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: #e7eefe;
}

.emotion-34 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-34:hover {
  border-radius: 100%;
  background: #d0defd;
}

.emotion-95 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-140 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
}

.emotion-140:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: 0;
  right: initial;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-173 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-173>button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-174 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #175BF5;
  background-color: transparent;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: solid 0.0625rem #175BF5;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-174:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.125rem;
}

.emotion-174:hover:not(:disabled) {
  background-color: rgba(23,91,245,0.07);
}

.emotion-174:active:not(:disabled) {
  background-color: rgba(23,91,245,0.14);
}

.emotion-174:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-174:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-175 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-176 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-177 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #175BF5;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-177:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-177:hover:not(:disabled) {
  background-color: #1451dc;
}

.emotion-177:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-177:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-177:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #edefff;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  margin-bottom: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  padding: 0 1.5rem;
  z-index: 10;
}

.emotion-2>div:first-of-type {
  margin-right: 1.5rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-5 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #0f0f17;
  width: 1.5625rem;
  height: 1.5625rem;
}

.emotion-7 path {
  fill: #0f0f17;
}

.emotion-8 {
  margin: 1rem 0;
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-9 {
  margin: 0 0.5rem;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-top: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-color: #edefff;
}

.emotion-11 {
  color: #757bb2;
  padding: 1rem 0;
  width: 2.4375rem;
  font-size: 0.875rem;
  text-align: center;
  font-weight: 500;
}

.emotion-18 {
  border-collapse: separate;
  border-spacing: 0 0.5rem;
}

.emotion-19 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: transparent;
}

.emotion-25 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
}

.emotion-26 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-26:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-29 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-30 {
  border: 0.0625rem solid #b0b8ff;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-30:hover {
  border-radius: 100%;
  background: #f6f7ff;
}

.emotion-31 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-31:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-32 {
  border: 0.0625rem solid transparent;
  border-radius: 100%;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175BF5;
}

.emotion-32:hover {
  border-radius: 100%;
  background: false;
}

.emotion-33 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #0f0f17;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: #e7eefe;
}

.emotion-34 {
  border: 0.0625rem solid transparent;
  width: 2.4375rem;
  height: 2.4375rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-34:hover {
  border-radius: 100%;
  background: #d0defd;
}

.emotion-95 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-140 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: white;
  width: 2.5rem;
  padding: 0 0.25rem;
  opacity: 1;
  background: transparent;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
}

.emotion-140:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  background: #e7eefe;
  left: 0;
  right: initial;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-173 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  margin-bottom: 1rem;
  margin-right: 1.5rem;
}

.emotion-173>button {
  margin: 0.5rem 0 0.5rem 0.5rem;
}

.emotion-174 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: #175BF5;
  background-color: transparent;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: solid 0.0625rem #175BF5;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-174:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.125rem;
}

.emotion-174:hover:not(:disabled) {
  background-color: rgba(23,91,245,0.07);
}

.emotion-174:active:not(:disabled) {
  background-color: rgba(23,91,245,0.14);
}

.emotion-174:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-174:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-175 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-176 {
  margin-left: 0;
  margin-right: 0;
}

.emotion-177 {
  font-size: 0.8125rem;
  font-weight: 500;
  color: white;
  background-color: #175BF5;
  padding: 0 1rem;
  height: 2.25rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-177:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-177:hover:not(:disabled) {
  background-color: #1451dc;
}

.emotion-177:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-177:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-177:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
              data-testid="month_back"
            >
              <span
                class="emotion-6"
              >
                <span
                  class="emotion-7"
                />
              </span>
            </div>
            <div
              role="button"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    data-testid="left_month"
                  >
                    November
                     
                    2020
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <div
              class="emotion-11"
            >
              Mo
            </div>
            <div
              class="emotion-11"
            >
              Tu
            </div>
            <div
              class="emotion-11"
            >
              We
            </div>
            <div
              class="emotion-11"
            >
              Th
            </div>
            <div
              class="emotion-11"
            >
              Fr
            </div>
            <div
              class="emotion-11"
            >
              Sa
            </div>
            <div
              class="emotion-11"
            >
              Su
            </div>
          </div>
          <table
            class="emotion-18"
          >
            <tbody>
              <tr>
                <td
                  class="emotion-19"
                />
                <td
                  class="emotion-19"
                />
                <td
                  class="emotion-19"
                />
                <td
                  class="emotion-19"
                />
                <td
                  class="emotion-19"
                />
                <td
                  class="emotion-19"
                />
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="1_11_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      1
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="2_11_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-29"
                    data-testid="3_11_2020"
                  >
                    <div
                      class="emotion-30"
                    >
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-31"
                    data-testid="4_11_2020_selected"
                  >
                    <div
                      class="emotion-32"
                    >
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="5_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="6_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      6
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="7_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="8_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      8
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="9_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="10_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="11_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="12_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="13_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      13
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="14_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="15_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      15
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="16_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="17_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="18_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="19_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="20_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      20
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="21_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="22_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      22
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="23_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="24_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="25_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="26_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="27_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      27
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="28_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="29_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      29
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="30_11_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      30
                    </div>
                  </div>
                </td>
                <td
                  class="emotion-19"
                />
                <td
                  class="emotion-19"
                />
                <td
                  class="emotion-19"
                />
                <td
                  class="emotion-19"
                />
                <td
                  class="emotion-19"
                />
                <td
                  class="emotion-19"
                />
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              role="button"
            >
              <div
                class="emotion-8"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    data-testid="right_month"
                  >
                    December
                     
                    2020
                  </div>
                </div>
              </div>
              <div
                class="emotion-95"
                data-testid="month_forward"
              >
                <span
                  class="emotion-6"
                >
                  <span
                    class="emotion-7"
                  />
                </span>
              </div>
            </div>
          </div>
          <div
            class="emotion-10"
          >
            <div
              class="emotion-11"
            >
              Mo
            </div>
            <div
              class="emotion-11"
            >
              Tu
            </div>
            <div
              class="emotion-11"
            >
              We
            </div>
            <div
              class="emotion-11"
            >
              Th
            </div>
            <div
              class="emotion-11"
            >
              Fr
            </div>
            <div
              class="emotion-11"
            >
              Sa
            </div>
            <div
              class="emotion-11"
            >
              Su
            </div>
          </div>
          <table
            class="emotion-18"
          >
            <tbody>
              <tr>
                <td
                  class="emotion-19"
                />
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="1_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      1
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="2_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="3_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="4_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="5_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="6_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      6
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="7_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="8_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      8
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="9_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="10_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="11_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="12_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="13_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      13
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="14_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="15_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      15
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-33"
                    data-testid="16_12_2020"
                  >
                    <div
                      class="emotion-34"
                    >
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-140"
                    data-testid="17_12_2020_selected"
                  >
                    <div
                      class="emotion-32"
                    >
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="18_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="19_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="20_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      20
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="21_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="22_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      22
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="23_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="24_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="25_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="26_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="27_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      27
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="28_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="29_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      29
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="30_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      30
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div
                    class="emotion-25"
                    data-testid="31_12_2020"
                  >
                    <div
                      class="emotion-26"
                    >
                      31
                    </div>
                  </div>
                </td>
                <td
                  class="emotion-19"
                />
                <td
                  class="emotion-19"
                />
                <td
                  class="emotion-19"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        class="emotion-173"
      >
        <button
          class="emotion-174"
          data-testid="button-cancel"
          type="button"
        >
          <span
            class="emotion-175"
          >
            <span
              class="emotion-176"
            >
              Cancel
            </span>
          </span>
        </button>
        <button
          class="emotion-177"
          data-testid="button-apply"
          type="button"
        >
          <span
            class="emotion-175"
          >
            <span
              class="emotion-176"
            >
              Apply
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
